<resources>
    <string name="app_name">My Movie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password_italic"><u>Forgot Password?</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">logo</string>
    <string name="close">Close</string>
    <string name="dont_have_account"><u>Don\'t have account? Sign Up!</u></string>
    <string name="or">OR</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account"><u>Already have an account? Sign in!</u></string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="sub_forgot_password">Don\'t worry we just need your \n registered email address and its done!</string>
    <string name="go_back">Go Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="notify_send_email_reset_password_successful">Recovery email sent successful! Please check Inbox!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="my_mall">My Mall</string>
    <string name="my_orders">My Orders</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wish_list">My Wish List</string>
    <string name="my_account">My Account</string>
    <string name="sign_out">Sign Out</string>

    <string name="api_base_url">https://api.themoviedb.org/3/</string>
    <string name="transition_poster">poster_transition</string>
    <string name="transition_title">title_transition</string>
    <string name="release_date_template">Release: %s</string>
    <string name="my_favorites">My Favorites</string>
    <string name="popular">Popular</string>
    <string name="trailers">Trailers</string>
    <string name="overview">Overview</string>
    <string name="reviews">Reviews</string>
    <string name="favorites_empty_message">Nothing here\n(…yet!)</string>
    <string name="search_no_results_message">No results for\n%s</string>
    <string name="n_a">N/A</string>
    <string name="search">Search</string>
    <string name="type_here_to_begin_your_search">Type here to begin your search...</string>
    <string name="idbm_item">IDBM <b>8.1</b></string>
</resources>
