<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.mymallupgrade.presentation.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.auth.SignUpFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.MyCustom"
            app:boxBackgroundColor="#80FA8181"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.MyCustom"
            app:boxBackgroundColor="#80FA8181"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                android:text="@={viewmodel.password}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            style="@style/ButtonRedLong"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> viewmodel.login()}"
            android:text="@string/sign_in"
            android:textColor="@color/btnTextColorDisable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_password_layout"
            app:layout_constraintVertical_bias="0.48000002" />

        <ImageButton
            android:id="@+id/btn_close_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close"
            android:src="@drawable/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/splash_activity_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024" />

        <ProgressBar
            android:id="@+id/prg_sign_in"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_layout" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewmodel.jumpToForgotPassword()}"
            android:text="@string/forgot_password_italic"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/edt_password_layout"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_layout" />

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:onClick="@{() -> viewmodel.jumpToSignUp()}"
            android:text="@string/dont_have_account"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/or"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/tv_dont_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

        <View
            android:id="@+id/dividerLeft"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_or"
            app:layout_constraintEnd_toStartOf="@+id/tv_or"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
            app:layout_constraintTop_toTopOf="@+id/tv_or" />

        <View
            android:id="@+id/dividerRight"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_or"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
            app:layout_constraintStart_toEndOf="@+id/tv_or"
            app:layout_constraintTop_toTopOf="@+id/tv_or" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>